--- a/packages/ckeditor5-ui/theme/globals/_evaluationbadge.css
+++ b/packages/ckeditor5-ui/theme/globals/_evaluationbadge.css
@@ -4,9 +4,12 @@
  */
 
 :root {
-	--ck-evaluation-badge-font-size: 0.576923em;
-	--ck-evaluation-badge-line-height: 0.576923em;
-	--ck-evaluation-badge-letter-spacing: -0.015em;
+	/* where 7.5(px) is the font size of the evaluation badge label and 13(px) is the base font size. */
+	--ck-evaluation-badge-font-size: calc(var(--ck-font-size-base) * 7.5 / 13);
+	/* where 7.5(px) is the line height of the evaluation badge label and 13(px) is the base font size. */
+	--ck-evaluation-badge-line-height: calc(var(--ck-font-size-base) * 7.5 / 13);
+	/* where -0.2(px) is the letter spacing of the evaluation badge label and 13(px) is the base font size. */
+	--ck-evaluation-badge-letter-spacing: calc(var(--ck-font-size-base) * -0.2 / 13);
 	--ck-evaluation-badge-padding-vertical: 2px;
 	--ck-evaluation-badge-padding-horizontal: 4px;
 	--ck-evaluation-badge-text-color: hsl(0, 0%, 31%);
