--- a/packages/ckeditor5-theme-lark/theme/index.css
+++ b/packages/ckeditor5-theme-lark/theme/index.css
@@ -72,6 +72,7 @@
 @import "./ckeditor5-link/linktoolbar.css";
 @import "./ckeditor5-link/linkform.css";
 @import "./ckeditor5-link/linkimage.css";
+@import "./ckeditor5-link/linkbookmarks.css";
 @import "./ckeditor5-list/listproperties.css";
 @import "./ckeditor5-list/liststyles.css";
 @import "./ckeditor5-media-embed/mediaembedediting.css";
