--- a/packages/ckeditor5-image/theme/textalternativeform.css
+++ b/packages/ckeditor5-image/theme/textalternativeform.css
@@ -5,28 +5,79 @@
 
 @import "@ckeditor/ckeditor5-ui/theme/mixins/_rwd.css";
 
-.ck.ck-text-alternative-form {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
+:root {
+	--ck-text-alternative-panel-width: 380px;
+	--ck-text-alternative-list-view-max-height: 240px;
+	--ck-text-alternative-list-view-icon-size: calc( var(--ck-icon-size) * 0.8); /* 0.8 = 16/20 cause default the icon size is 20px */
+}
 
-	& .ck-labeled-field-view {
-		display: inline-block;
+.ck.ck-text-alternative__panel {
+	width: var(--ck-text-alternative-panel-width);
+
+	&:focus {
+		outline: none;
 	}
 
-	& .ck-label {
-		display: none;
+	/* Header */
+	& .ck-form__header {
+		padding: var(--ck-spacing-small) var(--ck-spacing-medium);
+
+		& > .ck:not(:first-child) {
+			margin-left: var(--ck-spacing-small);
+		}
 	}
 
-	@mixin ck-media-phone {
-		flex-wrap: wrap;
+	/* Form */
+	& .ck-responsive-form.ck-text-alternative__form {
+		display: flex;
+		flex-direction: column;
 
-		& .ck-labeled-field-view {
-			flex-basis: 100%;
+		& > * {
+			margin: 0;
+
+			@mixin ck-media-phone {
+				margin: var(--ck-spacing-large) var(--ck-spacing-medium)  var(--ck-spacing-medium)  var(--ck-spacing-medium);
+			}
 		}
 
-		& .ck-button {
-			flex-basis: 50%;
+		& > .ck:not(:first-child) {
+			margin-top: var(--ck-spacing-large);
+		}
+
+		& .ck-labeled-field-view {
+			flex-grow: 1;
+
+			& input {
+				width: 100%;
+			}
+		}
+
+		/* "Save" input field and the "Insert" button */
+		& .ck-text-alternative-and-submit {
+			display: flex;
+
+			& > .ck-labeled-field-view {
+				flex: 1;
+			}
+
+			& .ck-button-action {
+				padding: var(--ck-spacing-tiny) var(--ck-spacing-large);
+				margin-left: var(--ck-spacing-medium);
+				height: 30px;
+			}
+
+			@mixin ck-media-phone {
+				flex-direction: column;
+
+				& > .ck {
+					margin: 0;
+				}
+
+				& .ck-button-action {
+					margin-top: var(--ck-spacing-large);
+					justify-content: center;
+				}
+			}
 		}
 	}
 }
