Increase specificity of link panel for bookmarks.

--- a/packages/ckeditor5-link/theme/linkbookmarks.css
+++ b/packages/ckeditor5-link/theme/linkbookmarks.css
@@ -3,7 +3,7 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
  */
 
-.ck.ck-link__panel {
+.ck.ck-link__panel.ck-link__bookmarks {
 	& > .ck-list__bookmark-items {
 		overflow-x: hidden;
 		overflow-y: auto;
