--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
@@ -18,7 +18,7 @@
 	}
 }
 
-/* Generic class that wraps each form view. */
+/* Generic class that wraps each link balloon view. */
 .ck.ck-link__panel {
 	width: var(--ck-link-panel-width);
 
