Move definitions of variables to proper file.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkbookmarks.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkbookmarks.css
@@ -3,6 +3,11 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
  */
 
+:root {
+	--ck-link-list-view-max-height: 240px;
+	--ck-link-list-view-icon-size: calc( var(--ck-icon-size) * 0.8); /* 0.8 = 16/20 cause default the icon size is 20px */
+}
+
 .ck.ck-link__panel.ck-link__bookmarks {
 	& > .ck-list__bookmark-items {
 		max-height: min( var(--ck-link-list-view-max-height), 40vh );
