--- a/packages/ckeditor5-theme-lark/theme/index.css
+++ b/packages/ckeditor5-theme-lark/theme/index.css
@@ -68,6 +68,7 @@
 @import "./ckeditor5-image/imageuploadicon.css";
 @import "./ckeditor5-image/imageuploadloader.css";
 @import "./ckeditor5-image/imageuploadprogress.css";
+@import "./ckeditor5-image/textalternativeform.css";
 @import "./ckeditor5-link/link.css";
 @import "./ckeditor5-link/linktoolbar.css";
 @import "./ckeditor5-link/linkform.css";
