--- a/packages/ckeditor5-theme-lark/theme/index.css
+++ b/packages/ckeditor5-theme-lark/theme/index.css
@@ -56,6 +56,8 @@
 
 /* Plugins */
 @import "./ckeditor5-bookmark/bookmark.css";
+@import "./ckeditor5-bookmark/bookmarkform.css";
+@import "./ckeditor5-bookmark/bookmarktoolbar.css";
 @import "./ckeditor5-clipboard/clipboard.css";
 @import "./ckeditor5-code-block/codeblock.css";
 @import "./ckeditor5-engine/placeholder.css";
