Unify input-and-submit CSS class.

--- a/packages/ckeditor5-image/theme/imagecustomresizeform.css
+++ b/packages/ckeditor5-image/theme/imagecustomresizeform.css
@@ -12,7 +12,7 @@
 		flex-direction: column;
 
 		/* "Size" input field and the "Save" button */
-		& .ck-resize-and-submit {
+		& .ck-input-and-submit {
 			display: flex;
 
 			& > .ck-labeled-field-view {
