--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-image/imagecustomresizeform.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-image/imagecustomresizeform.css
@@ -36,7 +36,7 @@
 		width: 100%;
 
 		/* "Size" input field and the "Save" button */
-		& .ck-resize-and-submit {
+		& .ck-input-and-submit {
 			margin: 0;
 
 			@mixin ck-media-phone {
@@ -51,7 +51,7 @@
 				}
 			}
 
-			& > .ck-button-resize {
+			& > .ck-button {
 				padding: var(--ck-spacing-extra-tiny) var(--ck-spacing-large);
 				margin-inline-start: var(--ck-spacing-medium);
 			}
@@ -61,7 +61,7 @@
 					margin: 0;
 				}
 
-				& .ck-button-resize {
+				& .ck-button {
 					margin-top: var(--ck-spacing-large);
 					justify-content: center;
 				}
