--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
@@ -58,8 +58,8 @@
 		}
 
 		/* "Link" input field and the "Insert" button */
-		& .ck-link-and-submit {
-			& .ck-button-insert {
+		& .ck-input-and-submit {
+			& .ck-button {
 				padding: var(--ck-spacing-extra-tiny) var(--ck-spacing-large);
 				margin-inline-start: var(--ck-spacing-medium);
 			}
@@ -69,7 +69,7 @@
 					margin: 0;
 				}
 
-				& .ck-button-insert {
+				& .ck-button {
 					margin-top: var(--ck-spacing-large);
 				}
 			}
