--- a/packages/ckeditor5-image/theme/imagecustomresizeform.css
+++ b/packages/ckeditor5-image/theme/imagecustomresizeform.css
@@ -14,6 +14,7 @@
 		/* "Size" input field and the "Save" button */
 		& .ck-input-and-submit {
 			display: flex;
+			align-items: flex-start;
 
 			& > .ck-labeled-field-view {
 				flex-grow: 1;
@@ -21,6 +22,7 @@
 
 			@mixin ck-media-phone {
 				flex-direction: column;
+				align-items: stretch;
 			}
 		}
 	}
