Code review fixes.

--- a/packages/ckeditor5-image/theme/textalternativeform.css
+++ b/packages/ckeditor5-image/theme/textalternativeform.css
@@ -11,7 +11,7 @@
 		display: flex;
 		flex-direction: column;
 
-		/* "Size" input field and the "Save" button */
+		/* "Text alternative" input field and the "Save" button */
 		& .ck-input-and-submit {
 			display: flex;
 
