Code review fixes.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-image/textalternativeform.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-image/textalternativeform.css
@@ -35,7 +35,7 @@
 	& .ck-responsive-form.ck-text-alternative__form {
 		width: 100%;
 
-		/* "Size" input field and the "Save" button */
+		/* "Text alternative" input field and the "Save" button */
 		& .ck-input-and-submit {
 			margin: 0;
 
