--- a/packages/ckeditor5-emoji/theme/emojipicker.css
+++ b/packages/ckeditor5-emoji/theme/emojipicker.css
@@ -2,3 +2,8 @@
  * Copyright (c) 2003-2024, CKSource Holding sp. z o.o. All rights reserved.
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
  */
+
+/* stylelint-disable selector-type-no-unknown */
+emoji-picker.ck.ck-emoji-picker {
+	height: 400px;
+}
