--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-table/formrow.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-table/formrow.css
@@ -6,18 +6,10 @@
 @import "@ckeditor/ckeditor5-ui/theme/mixins/_dir.css";
 
 .ck.ck-form__row {
-	padding: var(--ck-spacing-standard) var(--ck-spacing-large) 0;
-
 	/* Ignore labels that work as fieldset legends */
 	& > *:not(.ck-label) {
 		& + * {
-			@mixin ck-dir ltr {
-				margin-left: var(--ck-spacing-large);
-			}
-
-			@mixin ck-dir rtl {
-				margin-right: var(--ck-spacing-large);
-			}
+			margin-inline-start: var(--ck-spacing-large);
 		}
 	}
 
