--- a/packages/ckeditor5-link/theme/linkform.css
+++ b/packages/ckeditor5-link/theme/linkform.css
@@ -6,33 +6,7 @@
 @import "@ckeditor/ckeditor5-ui/theme/mixins/_rwd.css";
 
 /* Generic class that wraps each link balloon view. */
-.ck.ck-link__panel {
-
-	/* Form */
-	& .ck-responsive-form.ck-link__form {
-		display: flex;
-		flex-direction: column;
-
-		& .ck-labeled-field-view {
-			flex-grow: 1;
-		}
-
-		/* "Link" input field and the "Insert" button */
-		& .ck-input-and-submit {
-			display: flex;
-			align-items: flex-start;
-
-			@mixin ck-media-phone {
-				flex-direction: column;
-				align-items: stretch;
-
-				& .ck-button {
-					justify-content: center;
-				}
-			}
-		}
-	}
-
+.ck.ck-link-form {
 	& .ck-link__providers-list {
 		display: flex;
 		flex-direction: column;
