--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkbookmarks.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkbookmarks.css
@@ -3,12 +3,23 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
+@import "@ckeditor/ckeditor5-ui/theme/mixins/_rwd.css";
+
 :root {
+	--ck-link-bookmarks-panel-width: 340px;
 	--ck-link-list-view-max-height: 240px;
 	--ck-link-list-view-icon-size: calc( var(--ck-icon-size) * 0.8); /* 0.8 = 16/20 cause default the icon size is 20px */
 }
 
+@mixin ck-media-phone {
+	:root {
+		--ck-link-bookmarks-panel-width: 300px;
+	}
+}
+
 .ck.ck-link__panel.ck-link__bookmarks {
+	width: var(--ck-link-bookmarks-panel-width);
+
 	& > .ck-list__bookmark-items {
 		max-height: min( var(--ck-link-list-view-max-height), 40vh );
 
