--- a/packages/ckeditor5-ui/theme/components/form/form.css
+++ b/packages/ckeditor5-ui/theme/components/form/form.css
@@ -23,7 +23,11 @@
 
 	& .ck.ck-form__row {
 		&.ck-form__row_large-top-padding {
-			padding: var(--ck-spacing-large) var(--ck-spacing-large) 0;
+			padding-top: var(--ck-spacing-large);
+		}
+
+		&.ck-form__row_large-bottom-padding {
+			padding-bottom: var(--ck-spacing-large);
 		}
 
 		&.ck-form__row_with-submit {
@@ -79,6 +83,12 @@
 					@mixin ck-media-phone {
 						justify-content: center;
 					}
+				}
+			}
+
+			&.ck-form__row_large-bottom-padding {
+				@mixin ck-media-phone {
+					padding-bottom: var(--ck-spacing-large);
 				}
 			}
 		}
