--- a/packages/ckeditor5-theme-lark/theme/index.css
+++ b/packages/ckeditor5-theme-lark/theme/index.css
@@ -77,6 +77,7 @@
 @import "./ckeditor5-link/linktoolbar.css";
 @import "./ckeditor5-link/linkform.css";
 @import "./ckeditor5-link/linkimage.css";
+@import "./ckeditor5-link/linkproperties.css";
 @import "./ckeditor5-link/linkprovideritems.css";
 @import "./ckeditor5-list/listproperties.css";
 @import "./ckeditor5-list/liststyles.css";
