--- a/packages/ckeditor5-ui/theme/components/form/form.css
+++ b/packages/ckeditor5-ui/theme/components/form/form.css
@@ -21,28 +21,6 @@
 		outline: none;
 	}
 
-	& .ck.ck-form__row {
-		&.ck-form__row_large-top-padding {
-			padding-top: var(--ck-spacing-large);
-		}
-
-		&.ck-form__row_large-bottom-padding {
-			padding-bottom: var(--ck-spacing-large);
-		}
-
-		&.ck-form__row_with-submit {
-			flex-wrap: nowrap;
-
-			& > *:not(:first-child) {
-				margin-inline-start: var(--ck-spacing-standard);
-			}
-		}
-
-		& > .ck.ck-form__row {
-			padding: 0;
-		}
-	}
-
 	& .ck.ck-input-text,
 	& .ck.ck-input-number {
 		min-width: 100%;
@@ -63,7 +41,7 @@
 		}
 	}
 
-	/* Responsive form customization */
+	/* Default `ck-responsive-form` customization when it lies next to `ck-form` class */
 	&.ck-responsive-form {
 		/* stylelint-disable no-descending-specificity */
 		& .ck.ck-form__row {
@@ -106,5 +84,5 @@
 			}
 		}
 	}
-	/* End of responsive form customization */
+	/* End of `ck-responsive-form` customization */
 }
