--- a/packages/ckeditor5-emoji/theme/emojicategories.css
+++ b/packages/ckeditor5-emoji/theme/emojicategories.css
@@ -3,6 +3,12 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
  */
 
-.ck.ck-character-categories .ck.ck-button.ck-button_with-text.ck-active-category {
-	border-bottom: 2px #4169e1 solid;
+.ck.ck-emoji-categories .ck.ck-button.ck-button_with-text {
+	border-bottom-width: 2px;
+	border-bottom-style: solid;
+	border-bottom-color: transparent;
+
+	&.ck-active-category {
+		border-bottom-color: var(--ck-color-base-active);
+	}
 }
