--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-emoji/emojigrid.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-emoji/emojigrid.css
@@ -7,25 +7,25 @@
 @import "../mixins/_rounded.css";
 
 :root {
-	--ck-character-grid-tile-size: 24px;
+	--ck-emoji-grid-tile-size: 24px;
 }
 
-.ck.ck-character-grid {
+.ck.ck-emoji-grid {
 	overflow-y: auto;
 	overflow-x: hidden;
 	border-top: 1px solid var(--ck-color-base-border);
 
-	& .ck-character-grid__tiles {
-		grid-template-columns: repeat(auto-fill, minmax(var(--ck-character-grid-tile-size), 1fr));
+	& .ck-emoji-grid__tiles {
+		grid-template-columns: repeat(auto-fill, minmax(var(--ck-emoji-grid-tile-size), 1fr));
 		margin: var(--ck-spacing-standard) var(--ck-spacing-large);
 		grid-gap: var(--ck-spacing-standard);
 	}
 
-	& .ck-character-grid__tile {
-		width: var(--ck-character-grid-tile-size);
-		height: var(--ck-character-grid-tile-size);
-		min-width: var(--ck-character-grid-tile-size);
-		min-height: var(--ck-character-grid-tile-size);
+	& .ck-emoji-grid__tile {
+		width: var(--ck-emoji-grid-tile-size);
+		height: var(--ck-emoji-grid-tile-size);
+		min-width: var(--ck-emoji-grid-tile-size);
+		min-height: var(--ck-emoji-grid-tile-size);
 		font-size: 1.5em;
 		padding: 0;
 		transition: .2s ease box-shadow;
@@ -44,7 +44,7 @@
 
 		/* Make sure the glyph is rendered in the center of the button */
 		& .ck-button__label {
-			line-height: var(--ck-character-grid-tile-size);
+			line-height: var(--ck-emoji-grid-tile-size);
 			width: 100%;
 			text-align: center;
 		}
