Changed list providers CSS class name.

--- a/packages/ckeditor5-link/theme/linkform.css
+++ b/packages/ckeditor5-link/theme/linkform.css
@@ -7,7 +7,7 @@
 
 /* Generic class that wraps each link balloon view. */
 .ck.ck-link-form {
-	& .ck-link__providers-list {
+	& .ck-link-form__providers-list {
 		display: flex;
 		flex-direction: column;
 
