--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkform.css
@@ -29,7 +29,7 @@
 		}
 	}
 
-	& .ck-link__providers-list {
+	& .ck-link-form__providers-list {
 		border-top: 1px solid var(--ck-color-base-border);
 
 		& .ck-link__button {
