--- a/packages/ckeditor5-emoji/theme/emojipicker.css
+++ b/packages/ckeditor5-emoji/theme/emojipicker.css
@@ -16,3 +16,19 @@
 	padding: 10px;
 	justify-content: space-between;
 }
+
+/*
+ * Classes used by the "fake visual selection" displayed in the content when an input
+ * in the emoji picker UI has focus (the browser does not render the native selection in this state).
+ */
+.ck .ck-fake-emoji-selection {
+	background: var(--ck-color-link-fake-selection);
+}
+
+/* A collapsed fake visual selection. */
+.ck .ck-fake-emoji-selection_collapsed {
+	height: 100%;
+	border-right: 1px solid var(--ck-color-base-text);
+	margin-right: -1px;
+	outline: solid 1px hsla(0, 0%, 100%, .5);
+}
