--- a/packages/ckeditor5-emoji/theme/emojicategories.css
+++ b/packages/ckeditor5-emoji/theme/emojicategories.css
@@ -3,12 +3,16 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-.ck.ck-emoji-categories .ck.ck-button.ck-button_with-text {
-	border-bottom-width: 2px;
-	border-bottom-style: solid;
-	border-bottom-color: transparent;
+.ck.ck-emoji-categories {
+	padding: 0 var(--ck-spacing-large);
 
-	&.ck-active-category {
-		border-bottom-color: var(--ck-color-base-active);
+	& .ck.ck-button.ck-button_with-text {
+		border-bottom-width: 2px;
+		border-bottom-style: solid;
+		border-bottom-color: transparent;
+
+		&.ck-active-category {
+			border-bottom-color: var(--ck-color-base-active);
+		}
 	}
 }
