--- a/packages/ckeditor5-emoji/theme/emojitone.css
+++ b/packages/ckeditor5-emoji/theme/emojitone.css
@@ -3,12 +3,14 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-.ck.ck-emoji-tone {
-	button.ck.ck-button.ck-button_with-text {
-		width: fit-content;
-
-		> span.ck.ck-button__label {
+.ck.ck-emoji-picker {
+	& .ck-emoji-tone {
+		button.ck.ck-button.ck-button_with-text {
 			width: fit-content;
+
+			> span.ck.ck-button__label {
+				width: fit-content;
+			}
 		}
 	}
 }
