Restored previous styles to make unit tests pass. Added additional `.ck` class to tone search wrapper to prevent overriding its styles with the reset stylesheet.

--- a/packages/ckeditor5-emoji/theme/emojicategories.css
+++ b/packages/ckeditor5-emoji/theme/emojicategories.css
@@ -3,14 +3,12 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-licensing-options
  */
 
-.ck.ck-emoji-picker {
-	& .ck-emoji-categories .ck.ck-button.ck-button_with-text {
-		border-bottom-width: 2px;
-		border-bottom-style: solid;
-		border-bottom-color: transparent;
+.ck.ck-emoji-categories .ck.ck-button.ck-button_with-text {
+	border-bottom-width: 2px;
+	border-bottom-style: solid;
+	border-bottom-color: transparent;
 
-		&.ck-active-category {
-			border-bottom-color: var(--ck-color-base-active);
-		}
+	&.ck-active-category {
+		border-bottom-color: var(--ck-color-base-active);
 	}
 }
