Fixed selection handling when bookmark is at the start of a paragraph - selection can be placed before a bookmark.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-bookmark/bookmark.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-bookmark/bookmark.css
@@ -38,6 +38,7 @@
 
 		& .ck-bookmark__icon {
 			position: relative;
+			display: block;
 			/* To make it align with text baseline. */
 			top: -0.1em;
 
