--- a/packages/ckeditor5-emoji/theme/emojicategories.css
+++ b/packages/ckeditor5-emoji/theme/emojicategories.css
@@ -4,15 +4,30 @@
  */
 
 .ck.ck-emoji-categories {
-	padding: 0 var(--ck-spacing-large);
+	display: flex;
+	justify-content: space-between;
+	margin: 0 var(--ck-spacing-large);
 
-	& .ck.ck-button.ck-button_with-text {
+	> .ck.ck-button.ck-button_with-text {
+		border-width: 0;
 		border-bottom-width: 2px;
 		border-bottom-style: solid;
 		border-bottom-color: transparent;
 
+		padding: 0;
+		
+		font-size: 1.5em;
+		min-width: 1.5em;
+		min-height: 1.5em;
+
 		&.ck-active-category {
 			border-bottom-color: var(--ck-color-base-active);
+		}
+
+		& > span {
+			/* width: 100%; */
+			margin: auto;
+			text-align: center;
 		}
 	}
 }
