--- a/packages/ckeditor5-emoji/theme/emojipicker.css
+++ b/packages/ckeditor5-emoji/theme/emojipicker.css
@@ -17,8 +17,8 @@
 
 .ck .ck.ck-search-tone-wrapper {
 	display: flex;
-	padding: 10px;
-	padding-bottom: 5px;
+	padding: var(--ck-spacing-large);
+	padding-bottom: var(--ck-spacing-medium);
 	justify-content: space-between;
 	align-items: center;
 }
